--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "const hello:string = \"hello, world\";   console.log(hello); ## for tsconfig.json, set     \"sourceMap\": true,     \"outDir\": \"dist\",    ## for package.json, add dev devdependencies:     \"typescript\": \"5.3.3\" ## for launch.json for vs code debugging. set   \"program\": \"${workspaceFolder}/dist/first.js\" ## \"yarn install\" to install package ## npx tsc to compile the codes. ## now you can debug it",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/kchen0723/NodeTs#readme",
   "devDependencies": {
-    "typescript": "5.3.3"
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.0",
+    "typescript": "^5.3.3"
   }
 }
